fixtures/uitests/tests/ui/fieldless_errors_used_in_callbacks_cant_have_fields.stderr
error[E0533]: expected unit struct, unit variant or constant, found struct variant `Self::DivisionByZero`
 --> $OUT_DIR[uniffi_uitests]/errors.uniffi.rs
  |
  | #[::uniffi::ffi_converter_error(crate::UniFfiTag)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `::uniffi::ffi_converter_error` (in Nightly builds, run with -Z macro-backtrace for more info)
